--- a/css/style.scss
+++ b/css/style.scss
@@ -120,6 +120,9 @@ $lvbcolor: #B6B3AE;
   top: 6px;
   right: 5px;
   z-index: 100;
+  @include small {
+    display: none;
+  }
 }
 .p-header__sp--menu--iconList {
   position: relative;
