--- a/bost/css/style.scss
+++ b/bost/css/style.scss
@@ -39,7 +39,7 @@
   }
 }
 .u-june {
-  background-image: url(../img/6.png);
+  background-image: url(../img/s_6.png);
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
@@ -47,7 +47,7 @@
   align-items: center;
 }
 .u-july {
-  background-image: url(../img/7.png);
+  background-image: url(../img/s_7.png);
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
@@ -55,7 +55,7 @@
   align-items: center;
 }
 .u-december {
-  background-image: url(../img/12.png);
+  background-image: url(../img/s_12.png);
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
@@ -63,7 +63,7 @@
   align-items: center;
 }
 .u-january {
-  background-image: url(../img/1.png);
+  background-image: url(../img/s_1.png);
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
