--- a/herb/css/style.scss
+++ b/herb/css/style.scss
@@ -47,7 +47,7 @@ $lvbcolor: #B6B3AE;
 }
 .p-header__inner {
   margin: 0 auto;
-  background-image: url(../img/hdr0.jpg);
+  background-image: url(../img/s_hdr0.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
